spade-tests/src/snapshots/spade_tests__ast_lowering__declaration_after_let_requires_new_definition.snap
---
source: spade-tests/src/ast_lowering.rs
expression: "std::str::from_utf8(buffer.as_slice()).expect(\"error contains invalid utf-8\")"
---
error: A previous declaration of x exists
  ┌─ testinput:2:9
  │
2 │     let x: int<8> = 0;
  │         ^ Previously declared here
3 │     decl x;
  │          ^ x was declared more than once


